# platby

./: .gitignore  PROCESSING_DATA.md  README.md  config.py  config_example.cfg  config_example.ini  email_template.html  email_template_prispevky.html  email_template_prispevky_upominka.html  email_template_sts.html  email_template_zaplaceno.html  google_authentication.py  gsheet.py  mail_encoding.py  mailer.py  payment_data.py  payment_info.py  prispevky.ipynb  pyproject.toml  qr_code.py
notebooks/: dev.py  prispevky.ipynb
src/prispevky/: __init__.py  config.py  google_authentication.py  gsheet.py  mail_encoding.py  mailer.py  payment_data.py  payment_info.py  qr_code.py
src/prispevky/cfg/: config_example.cfg  config_prispevky.cfg  config_sts.cfg  config_test.cfg
